--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
 </head>
 <body>
+    <button id="btn-translate">Translate</button>
     <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
