--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Translate | Banana language</title>
-    
+    <link href = "styles.css" rel="stylesheet">
 </head>
 <body>
+    <h1>Translate your input to banana language</h1>
+    <textarea placeholder = "Enter your text here and it will be translated to banana language" id="txt-input-area"></textarea>
     <button id="btn-translate">Translate</button>
     <script src="app.js" type="text/javascript"></script>
 </body>
