--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Translate your input to banana language</h1>
     <textarea placeholder = "Enter your text here and it will be translated to banana language" id="txt-input-area"></textarea>
     <button id="btn-translate">Translate</button>
+    <div id = "op-text">Output will come here 👇</div>
+    <div id = "output"></div>
     <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
