added styles,images, almost done

--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
     <link href = "styles.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Translate your input to banana language</h1>
-    <textarea placeholder = "Enter your text here and it will be translated to banana language" id="txt-input-area"></textarea>
-    <button id="btn-translate">Translate</button>
-    <div id = "op-text">Output will come here 👇</div>
-    <div id = "output"></div>
+    <h1 class = top-container>
+        Translate your input to banana language
+    </h1>
+    <img class= "banana-img" src= "/images/minions2.png"/>
+    <img class= "banana-img2" src= "/images/minions2.png"/>
+    <textarea placeholder = "Enter your text here and it will be translated to banana!" id="txt-input-area"></textarea>
+    <div class = container>
+        <button id="btn-translate">
+            Translate
+        </button>
+    </div>
+    <div id = "op-text">
+        Output will come here 👇
+    </div>
+    <div id = "output">
+    </div>
     <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
