--- a/index.html
+++ b/index.html
@@ -10,19 +10,32 @@
     <h1 class = top-container>
         Translate your input to banana language
     </h1>
-    <img class= "banana-img" src= "/images/minions2.png"/>
-    <img class= "banana-img2" src= "/images/minions2.png"/>
+    <!-- <img class= "banana-img" src= "/images/minions2.png"/>
+    <img class= "banana-img2" src= "/images/minions2.png"/> -->
     <textarea placeholder = "Enter your text here and it will be translated to banana!" id="txt-input-area"></textarea>
     <div class = container>
         <button id="btn-translate">
             Translate
         </button>
     </div>
+
     <div id = "op-text">
-        Output will come here 👇
+        Translation will come here 👇
     </div>
-    <div id = "output">
-    </div>
+
+    <div id = "output"></div>
+
+    <footer class="footer">
+        <div class = "footer about">
+            <h3>
+                About
+            </h3>
+            <p class="info">
+                Did you know that the gibberish that Gru's minions speak is an actual language? Do you want to know the translation? Have a try at this translation tool then! It will convert your english sentence to minion language! True minion fans will love this!
+            </p> 
+        </div>
+    </footer>
     <script src="app.js" type="text/javascript"></script>
+    
 </body>
 </html>
