--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1 class = top-container>
-        Translate your input to banana language
+        🍌🍌Banana Translator!🍌🍌
+        <p>
+            Did you know that the gibberish minions speak is actually a language? The language they speak is a combination of Spanish, French and Italian languages with some food references! Try this translator! It will convert your english input into minion lingo!
+        </p>
     </h1>
     <!-- <img class= "banana-img" src= "/images/minions2.png"/>
     <img class= "banana-img2" src= "/images/minions2.png"/> -->
@@ -25,7 +28,7 @@
 
     <div id = "output"></div>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class = "footer about">
             <h3>
                 About
@@ -34,7 +37,7 @@
                 Did you know that the gibberish that Gru's minions speak is an actual language? Do you want to know the translation? Have a try at this translation tool then! It will convert your english sentence to minion language! True minion fans will love this!
             </p> 
         </div>
-    </footer>
+    </footer> -->
     <script src="app.js" type="text/javascript"></script>
     
 </body>
