design changes final

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 class = top-container>
-        🍌🍌Banana Translator!🍌🍌
+        🍌Banana Translator!🍌
         <p>
             Did you know that the gibberish minions speak is actually a language? The language they speak is a combination of Spanish, French and Italian languages with some food references! Try this translator! It will convert your english input into minion lingo!
         </p>
