--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Translate | Banana language</title>
     <link href = "styles.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/ico" sizes="64x64" href="favicon/favicon.ico">
 </head>
 <body>
     <h1 class = top-container>
